# iturp452-17

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  test.sh
.github/workflows/: cmake-cpp.yml
ClearAirModel/: CMakeLists.txt
ClearAirModel/include/: BasicProp.h  ClutterLoss.h  DiffractionLoss.h  DuctingLoss.h  EffectiveEarth.h  GasAttenuationAnnex2.h  GasAttenuationHelpers.h  InvCumNorm.h  PathProfile.h  ProfilePath.h
ClearAirModel/include/ClearAirModel/: AnomalousProp.h  AnomolousProp.h  BasicProp.h  CalculationHelpers.h  ClearAirModelHelpers.h  ClutterLoss.h  DataGrid2.h  DiffractionLoss.h  EffectiveEarth.h  P452TotalAttenuation.h  PathProfile.h  TropoScatter.h
ClearAirModel/src/: AnomalousProp.cpp  AnomolousProp.cpp  BasicProp.cpp  CalculationHelpers.cpp  ClearAirModelHelpers.cpp  ClutterLoss.cpp  DataGrid2.cpp  DiffractionLoss.cpp  EffectiveEarth.cpp  GasAttenuation.cpp  InvCumNorm.cpp  P452TotalAttenuation.cpp  PathProfile.cpp  ProfilePath.cpp  Troposcatter.cpp
ClearAirModel/tests/: AttenuationTests.h  CMakeLists.txt  CalculationHelpersTests.cpp  CalculationTests.cpp  DeltaBullingtonTests.cpp  DeltaBullingtonTests.h  HelpersTests.cpp  mixed_profile_ValidationTests.cpp  p452_17_ValidationTests.cpp  test_profile_dense_urban.cpp  test_profile_dense_urban.h  test_profile_mixed_109km.h  test_profile_mixed_109km_ValidationTests.cpp
ClearAirModel/tests/clutter_profile_tests/: test_profile_dense_suburban.cpp  test_profile_dense_suburban.h  test_profile_dense_urban.cpp  test_profile_dense_urban.h  test_profile_flat_land_1000km.cpp  test_profile_flat_land_1000km.h  test_profile_flat_land_100km.cpp  test_profile_flat_land_100km.h  test_profile_flat_land_5km.cpp  test_profile_flat_land_5km.h  test_profile_industrial.cpp  test_profile_industrial.h  test_profile_land_70km.cpp  test_profile_land_70km.h
ClearAirModel/tests/test_paths/: path2.csv
ClutterModel/: CMakeLists.txt
ClutterModel/include/ClutterModel/: ClutterLoss.h
ClutterModel/src/: ClutterLoss.cpp
ClutterModel/tests/: CMakeLists.txt
ClutterModel/tests/clutter_profile_tests/: dense_suburban_testclass.h  dense_suburban_tests.cpp  dense_urban_testclass.h  dense_urban_tests.cpp  industrial_testclass.h  industrial_tests.cpp
ClutterModel_P452_17/: CMakeLists.txt
ClutterModel_P452_17/include/ClutterModel_P452_17/: ClutterLoss.h
ClutterModel_P452_17/src/: ClutterLoss.cpp
ClutterModel_P452_17/tests/: CMakeLists.txt
ClutterModel_P452_17/tests/clutter_profile_tests/: dense_suburban_testclass.h  dense_suburban_tests.cpp  dense_urban_testclass.h  dense_urban_tests.cpp  industrial_testclass.h  industrial_tests.cpp
Common/: CMakeLists.txt
Common/include/: BinaryFileReader.h  DataGrid.h  DataGridHelpers.h  DataGridLayerHelpers.h  DataStructures.h  Enumerations.h  ExceedanceDataGrid.h  GeodeticCoord.h  HeightScaledExceedanceDataGrid.h  MathHelpers.h  PhysicalConstants.h  PowerUnitConversionHelpers.h
Common/src/: BinaryFileReader.cpp  DataGrid.cpp  DataGridHelpers.cpp  DataGridLayerHelpers.cpp  Enumerations.cpp  ExceedanceDataGrid.cpp  GeodeticCoord.cpp  HeightScaledExceedanceDataGrid.cpp  MathHelpers.cpp  PowerUnitConversionHelpers.cpp
GasModel/: CMakeLists.txt
GasModel/include/: DataLoader.h  GasAttenuation.h  GasAttenuationAnnex1.h
GasModel/src/: DataLoader.cpp  GasAttenuationAnnex1.cpp  GasAttenuationAnnex2.cpp  GasAttenuationHelpers.cpp
GasModel/tests/: AttenuationTests.cpp
ITUR_P452/: CMakeLists.txt
ITUR_P452/include/ITUR_P452/: AnomalousProp.h  BasicProp.h  CalculationHelpers.h  DataGridTxt.h  DataLoader.h  DiffractionLoss.h  P452TotalAttenuation.h  TropoScatter.h
ITUR_P452/src/: AnomalousProp.cpp  BasicProp.cpp  CalculationHelpers.cpp  ClearAirModelHelpers.cpp  DataGridTxt.cpp  DataLoader.cpp  DiffractionLoss.cpp  P452TotalAttenuation.cpp  PathProfile.cpp  Troposcatter.cpp
ITUR_P452/tests/: CMakeLists.txt  DeltaBullingtonTests.cpp  DeltaBullingtonTests.h  HelpersTests.cpp
ITUR_P452/tests/no_clutter_profile_tests/: flat_land_1000km_testclass.h  flat_land_1000km_tests.cpp  flat_land_100km_testclass.h  flat_land_100km_tests.cpp  flat_land_5km_testclass.h  flat_land_5km_tests.cpp  land_70km_testclass.h  land_70km_tests.cpp  mixed_109km_testclass.h  mixed_109km_tests.cpp
ITUR_P452/tests/test_paths/: dbull_path3.csv  dbull_path4.csv
MainModel/: CMakeLists.txt
MainModel/include/MainModel/: AnomalousProp.h  BasicProp.h  ClearAirModelHelpers.h  DataGridTxt.h  DataLoader.h  DiffractionLoss.h  P452TotalAttenuation.h  PathProfile.h  TropoScatter.h
MainModel/src/: AnomalousProp.cpp  BasicProp.cpp  CalculationHelpers.cpp  ClearAirModelHelpers.cpp  DataGridTxt.cpp  DataLoader.cpp  DiffractionLoss.cpp  P452TotalAttenuation.cpp  PathProfile.cpp  Troposcatter.cpp
MainModel/tests/: CMakeLists.txt  DeltaBullingtonTests.cpp  DeltaBullingtonTests.h  HelpersTests.cpp
MainModel/tests/no_clutter_profile_tests/: flat_land_1000km_testclass.h  flat_land_1000km_tests.cpp  flat_land_100km_testclass.h  flat_land_100km_tests.cpp  flat_land_5km_testclass.h  flat_land_5km_tests.cpp  land_70km_testclass.h  land_70km_tests.cpp  mixed_109km_testclass.h  mixed_109km_tests.cpp
MainModel/tests/test_paths/: dbull_path1.csv
P452/: CMakeLists.txt
P452/include/P452/: GreatCirclePath.h  P452.h
P452/src/: GreatCirclePath.cpp  P452.cpp
P452/tests/: CMakeLists.txt  P452InterfaceTest.cpp
gdal-lib/: CMakeLists.txt
gdal-lib/include/gdal-lib/: GdalRasterProcessor.h  GdalVectorCreator.h  GdalVectorProcessor.h  LatLonCoord.h  VectorHelpers.h
gdal-lib/src/: GdalRasterProcessor.cpp  GdalVectorCreator.cpp  GdalVectorProcessor.cpp  VectorHelpers.cpp
